--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
     <head>
     	<script src="mySketch.js" type="text/javascript"></script>
     	<script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.6.1/p5.min.js" type="text/javascript"></script>
+    	<script type="text/javascript" src="https://tonejs.github.io/build/r6/p5.Tone.min.js"></script>
     </head>
 <body>
 </body>
