--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <html>
     <head>
-    	<script src="mySketch.js" type="text/javascript"></script>
     	<script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.6.1/p5.min.js" type="text/javascript"></script>
     	<script type="text/javascript" src="p5.speech.js"></script>
-    	<script type="text/javascript" src="p5.Tone.min.js"></script>
+    	<script type="text/javascript" src="Tone.js"></script>
     </head>
 <body>
+	<script src="mySketch.js" type="text/javascript"></script>
 </body>
 
 </html>
