--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <html>
     <head>
-    	<script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.6.1/p5.min.js" type="text/javascript"></script>
-    	<script type="text/javascript" src="p5.speech.js"></script>
-    	<script type="text/javascript" src="Tone.js"></script>
+    	<script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.7.2/p5.js" type="text/javascript"></script>
+    	<script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.7.2/addons/p5.dom.js"></script>
+    	<script type="text/javascript" src="lib/p5.speech.js"></script>
+    	<script type="text/javascript" src="lib/Tone.js"></script>
     </head>
 <body>
 	<script src="mySketch.js" type="text/javascript"></script>
