Minor changes to how beats array gets updated...

--- a/beats_demo/index.html
+++ b/beats_demo/index.html
@@ -4,6 +4,7 @@
     	<script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.6.1/p5.min.js" type="text/javascript"></script>
     </head>
 <body>
+    <script src="cursor.js" type="text/javascript"></script>
     <script src="key_mapping.js" type="text/javascript"></script>
     <script src="sketch.js" type="text/javascript"></script>
 </body>
