--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     	<script type="text/javascript" src="lib/Tone.js"></script>
     </head>
 <body>
+    <script src="colorPalettes.js" type="text/javascript"></script>
+    <script src="pizza.js" type="text/javascript"></script>
 	<script src="mySketch.js" type="text/javascript"></script>
 </body>
 
