--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
     </head>
 <body>
     <script src="colorPalettes.js" type="text/javascript"></script>
+    <script src="keyMappings.js" type="text/javascript"></script>
     <script src="pizza.js" type="text/javascript"></script>
-	<script src="mySketch.js" type="text/javascript"></script>
+	<script src="mySketch-test.js" type="text/javascript"></script>
 </body>
 
 </html>
