--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <script src="colorPalettes.js" type="text/javascript"></script>
     <script src="keyMappings.js" type="text/javascript"></script>
     <script src="pizza.js" type="text/javascript"></script>
+    <script src="audioCues.js" type="text/javascript"></script>
 	<script src="mySketch-test.js" type="text/javascript"></script>
 </body>
 
