--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <script src="keyMaps/keymap_master.js" type="text/javascript"></script>
     <script src="pizza.js" type="text/javascript"></script>
     <script src="audioCues.js" type="text/javascript"></script>
-	<script src="mySketch-test.js" type="text/javascript"></script>
+	<script src="mySketch.js" type="text/javascript"></script>
 </body>
 
 </html>
