Moved volume settings outside of mySketch file

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
         <script src="keyMaps/keymap_16th.js" type="text/javascript"></script>
         <script src="keyMaps/keymap_master.js" type="text/javascript"></script>
         <script src="instructions.js" type="text/javascript"></script>
+        <script src="audioMode.js" type="text/javascript"></script>
         <script src="pizza.js" type="text/javascript"></script>
         <!-- <script src="audioCues.js" type="text/javascript"></script> -->
     	<script src="mySketch.js" type="text/javascript"></script>
