Update screen reader message

--- a/index.html
+++ b/index.html
@@ -39,8 +39,9 @@
 
     <header class="hidden">
         <h1>Groove Pizza with Keyboard Controls</h2>
-        <p>This rhythm-making app has its own keyboard functions. Screen Reader can be turned off.</p>
+        <p>This is a music app for making beats. It has built in text to speech and keyboard controls.</p>
+        <p>Please turn your screen reader off. Then, press TAB to navigate to instructions.</p>
     </header>
-    
+
 </body>
 </html>
