one more screen reader message change

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     <header class="hidden">
         <h1>Groove Pizza with Keyboard Controls</h2>
         <p>This is a music app for making beats. It has built in text to speech and keyboard controls.</p>
-        <p>Please turn your screen reader off. Then, press TAB to navigate to instructions.</p>
+        <p>Please turn your screen reader off. Then, press tab to navigate to instructions.</p>
     </header>
 
 </body>
